# cst-machinery

./: .gitignore  README.md  dvc.yaml  params.yaml  pyproject.toml  pytest.ini
.dvc/: config
.github/: copilot-instructions.md
.github/workflows/: tests.yml
conf/: config.yaml  trialframe.yaml  trialframe_cst.yaml  trialframe_eye_calib.yaml  trialframe_partition.yaml  trialframe_smooth.yaml
conf/boilerplate/: lfads-torch.yaml
conf/datamodule/: cst-rtt.yaml
conf/lfads/: lfads-torch.yaml
data/: .gitignore  dwight.dvc
data/pre-lfads-tensors/: .gitignore
hydra_plugins/: my_resolver.py
logs/combine/: .gitignore
logs/context_axis/: .gitignore
logs/cross-task-decoding/: .gitignore
logs/extract/: .gitignore
logs/merge-lfads-outputs/: .gitignore
logs/movement-kinematics-plots/: .gitignore
logs/prep-lfads-tensors/: .gitignore
logs/prep-move-split/: .gitignore
logs/smooth-firing-rates/: .gitignore
logs/subspace-split/: .gitignore
scripts/: check lfads output.ipynb  combine_session.py  cross_task_decoding.py  cst rtt context.ipynb  decoding.ipynb  extract_normalized_data.py  extract_trial_frame.py  get_context_axis.py  merge_lfads_outputs.py  movement_kinematics_plots.py  neural_explained_variance.py  ofc_inference.ipynb  prep move split.ipynb  prep_lfads_tensors.py  prep_move_split.py  prep_move_split_plots.py  run_lfads.py  smooth_firing_rates.py  subspace_split.py  test_eye_calibration.ipynb  train_lfads.py  vegalite_to_svg.py
src/: __init__.py  cebra_embedding.py  chop_merge.py  cli.py  crystal_models.py  decoding.py  dpca_tensor.py  eye_calibration.py  io.py  lfads_callbacks.py  lfads_dvc.py  munge.py  ofc_model.py  plot.py  states.py  subspace_tools.py  targets.py  time_slice.py  timeseries.py
tests/: README.md  conftest.py  test_cebra_embedding.py  test_chop_merge.py  test_dpca_tensor.py  test_eye_calibration.py  test_io.py  test_munge_dpca.py  test_ofc_delay.py  test_states.py  test_subspace_tools.py  test_time_slice.py
(+67 files in other folders)
