[build-system]
requires = [
    "setuptools>=61.0.0",
    "wheel"
]
build-backend = "setuptools.build_meta"

[project]
name = "src"
version = "0.1.0"
description = "CST-RTT-DCO analysis tools"
authors = [
    { name = "Raeed Chowdhury" }
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "pandas",
    "pyarrow",
    "scipy",
    "seaborn",
    "matplotlib",
    "scikit-learn",
    "omegaconf",
    "altair",
    "xarray",
    "numexpr",
    "numba",
    "dpca",
    "cebra",
    "dynamax[notebooks]",
    "jupyter",
    # GitHub dependencies
    "smile_extract @ git+https://github.com/raeedcho/smile-extraction.git",
    "dekodec @ git+https://github.com/raeedcho/dekodec.git",
    "lfads_torch @ git+https://github.com/raeedcho/lfads-torch.git",
    "trialframe @ git+https://github.com/raeedcho/trialframe.git",
    "ioc @ git+https://github.com/raeedcho/inverse-optimal-control.git",
]

[project.optional-dependencies]
pipeline = [
    "dvc",
    "dvclive[lightning]",
]
dev = [
    "pytest",
    "pytest-cov",
    "black",
    "isort"
]

[tool.setuptools.packages.find]
where = ["."]